# PS-Vita-Recovery-Menu-Project

./: CMakeLists.txt  Makefile  README.md  boot_recovery.skprx  boot_trigger.suprx  main.c
VitaRecovery Screenshots/: Vitarecovery screenshots.txt
boot_plugin/: CMakeLists.txt  CMakeLists_user.txt  boot_recovery.c  exports.yml
boot_trigger_user/: CMakeLists.txt  boot_trigger_user.c
sce_sys/: param.sfo
sce_sys/livearea/contents/: template.xml
source/: CMakeLists.txt  boot_trigger_user.c  cheat_manager.c  cheat_manager.h  compat.c  compat.h  cpu.c  cpu.h  debugScreen.c  debugScreen.h  diag.c  diag.h  display.c  display.h  draw.c  draw.h  filemanager.c  filemanager.h  main.c  menu.c  menu.h  official_recovery.c  official_recovery.h  plugin_fix.c  plugin_fix.h  plugins.c  plugins.h  recovery_installer.c  recovery_installer.h  registry.c  registry.h  restore.c  restore.h  restore_screen.c  restore_screen.h  sd2vita.c  sd2vita.h  settings.c  settings.h  sysinfo.c  (+1 more)
